all done - Elena's remarks