@@ -1,9 +1,7 @@
 package practice;
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import model.Candidate;
@@ -21,10 +19,9 @@ public class StreamPractice {
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
                 .flatMap(s -> Stream.of(s.split(",")))
-                .map(String::trim)
                 .map(Integer::parseInt)
                 .filter(i -> i % 2 == 0)
-                .min(Comparator.naturalOrder())
+                .min(Integer::compare)
                 .orElseThrow(() -> new IllegalArgumentException("Can't get min value "
                         + "from list: < Here is our input 'numbers' >"));
     }
@@ -54,7 +51,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(p -> p.getSex().equals(Person.Sex.MAN) && p.getAge() >= fromAge
                         && p.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -74,7 +71,7 @@ public class StreamPractice {
                         && p.getAge() <= maleToAge || p.getSex().equals(Person.Sex.WOMAN)
                         && p.getAge() >= fromAge
                         && p.getAge() <= femaleToAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -88,7 +85,7 @@ public class StreamPractice {
                         >= femaleAge && !p.getCats().isEmpty())
                 .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -108,6 +105,6 @@ public class StreamPractice {
                 .filter(new CandidateValidator())
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
